ipc/ipdl/test/ipdl/error/unknownIntrMessage.ipdl
//error: Unknown sync IPC message unknownIntrMessage::Msg

intr protocol unknownIntrMessage {
parent:
    intr Msg();
};
